JD - Actualizacion